<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense2_bringup</name>
  <version>1.0.0</version>
  <description>Configured files for RealSense camera usage</description>
  <maintainer email="wu.kevi@northeastern.edu">Kevin Wu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>realsense2_camera</depend>
  <depend>imu_filter_madgwick</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
